--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,7 @@ obj/
 *.exe
 *.pdb
 *.cache
+/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.AssemblyInfoInputs.cache
+/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.AssemblyInfo.cs
+/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.csproj.CoreCompileInputs.cache
+/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.sourcelink.json
