--- a/.gitignore
+++ b/.gitignore
@@ -49,14 +49,9 @@ Thumbs.db
 
 # Ignore build output (DLLs, EXEs, etc.)
 bin/
+MoviesAPI/obj/
 obj/
 *.dll
 *.exe
 *.pdb
 *.cache
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.AssemblyInfoInputs.cache
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.AssemblyInfo.cs
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.csproj.CoreCompileInputs.cache
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/MoviesAPI.sourcelink.json
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/EndpointInfo/MoviesAPI.json
-/MoviesAPI/MoviesAPI/obj/Debug/net8.0/ApiEndpoints.json
