--- a/MoviesAPI/MoviesAPI/appsettings.json
+++ b/MoviesAPI/MoviesAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=MoviesDB;Trusted_Connection=True;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
